# AI_SECURITY_FEATURE

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FILES_INCLUDED.txt  LEGAL_NOTICE.md  README.md  SECURITY.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.ps1  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: index.py
database/: README.md  users_schema.sql
database/migrations/: 001_google_auth.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GOOGLE_SIGNIN.md  OPENAPI.yaml  ScamShield_AI_Project_Presentation.pptx  THREAT_MODEL.md  VERCEL_DEPLOYMENT.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  vite.config.ts
frontend/scamshield_ai_frontend2/: README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
scripts/: add_live_evidence_slides.py  capture_live_screenshots.py  create_project_presentation.py  migrate_postgres.py
src/: __init__.py  config.py
src/auth/: tokens.py
src/detection/: device_scanner.py  malware_detector.py  qr_checker.py  url_checker.py
src/scoring/: __init__.py  risk_score.py
src/services/: google_safe_browsing_service.py  urlscan_service.py  virustotal_service.py
tests/: test_app.py  test_device_scanner.py  test_malware_detector.py  test_risk_score.py  test_serverless_config.py  test_tokens.py  test_url_checker.py  test_user_store.py
(+33 files in other folders)
