[project]
name = "scamshield-ai"
version = "1.1.0"
description = "Defensive URL, message, file, QR, and device-folder security scanner"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0,<4.0",
  "flask-cors>=4.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.31,<3.0",
  "werkzeug>=3.0,<4.0",
  "google-auth>=2.0,<3.0",
  "PyJWT>=2.10,<3.0",
  "redis>=5.0,<7.0",
  "psycopg[binary]>=3.2,<4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
